# control-board-proxy

./: .gitmodules  CMakeLists.txt  README.md
cmake/: toolchain.linux-arm.cmake  toolchain.stm32.cmake
doc/: app.puml  equipment.puml  mqtt_stack.puml
etc/: emulator.cnf  eq-tm4c.cnf  eq.cnf  eq1.cnf
src/: CMakeLists.txt  Global.hpp  Symbols.hpp  main.cpp
src/app/: ControlBoardApp.cpp  ControlBoardApp.hpp  ControlBoardTU.cpp  ControlBoardTU.hpp  Dialog.cpp  Dialog.hpp
src/equipment/: AxisSelector.hpp  BasicAxis.hpp  BasicControlBoard.hpp  BasicEquipmentFacade.hpp  BasicMessage.hpp  BasicMessageWrapper.hpp  BzOffset.hpp  CMakeLists.txt  EqException.hpp  Global.hpp  IsDlp.hpp  IsEmulator.hpp  IsJson.hpp  IsSerial.hpp  IsTM4C.hpp  Tags.hpp  TransportSelector.hpp  UsbSerialPortTransport.hpp  makeEquipment.cpp  makeEquipment.hpp
src/equipment/abstract/: AxisImpl.hpp  BasicEquipmentFacade.hpp  BasicMessage.hpp  IsUsb.hpp  Tags.hpp  TransportSelector.hpp
src/equipment/dlp/: DlpAxis.hpp  DlpControlBoard.hpp  DlpEquipment.hpp  DlpTransport.hpp
src/equipment/emulator/: ControlBoard.hpp  EmulatorAxis.hpp  Equipment.hpp  Transport.hpp
src/equipment/interface/: AxisInterface.hpp  ControlBoardInterface.hpp  EquipmentInterface.hpp  Listenable.hpp  ListenerInterface.hpp  MotionResult.hpp  Result.hpp
src/equipment/serial_port/: AsyncSerialPort.cpp  AsyncSerialPort.hpp
src/equipment/tm4c/: TM4CAxis.hpp  TM4CControlBoard.hpp  TM4CEquipment.hpp  USBTransport.hpp
src/utils/: StringUtils.hpp
tools/: client.py  movements.py  projector_client.py
